# python-esios

./: .gitignore  .mcp.json  .release-please-config.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/esios/: SKILL.md
.github/workflows/: publish.yml  publish_to_pypi.yml  release-please.yml
esios/: archives.py  client.py  indicators.py
esios/archives/: __init__.py  preprocessing.py  utils.py
esios/endpoints/archives/: README.ipynb  notebook.ipynb
esios/endpoints/indicators/: README.ipynb
examples/: .gitignore  generate.py
examples/01_Quickstart/: 01_Setup and First Query.ipynb
examples/02_Indicators/: 01_Search Indicators.ipynb  02_Historical Data.ipynb  03_Multi-Geography Indicators.ipynb  04_Compare Indicators.ipynb  05_Market Prices.ipynb  06_Generation and Demand.ipynb
examples/03_Archives/: 01_Download Archives.ipynb  02_I90 Settlement Files.ipynb
examples/04_Caching/: 01_Cache Management.ipynb
examples/05_Advanced/: 01_Ad-hoc Pandas Expressions.ipynb  02_Async Client.ipynb
examples/10_Intro/: B.ipynb
examples/20_Archives/0_Steps/: B1_Download.ipynb
examples/20_Archives/1_I90/: B1_Download.ipynb
examples/20_Archives/1_I90 copy/: B1_Download.ipynb  B2_Analyze.ipynb  B3_Analyze.ipynb  esios.ipynb  testing.ipynb
examples/20_Archives/1_I90 copy/data/: b4_individual_all.ipynb  sheets.yml
examples/20_Indicators/0_Steps/: B1_Download.ipynb
examples/20_Indicators/2_Generation/: B1_Download.ipynb  B2_Analyze.ipynb
examples/30_Archives/0_Steps/: B2_Analyze.ipynb
examples/30_Archives/1_I90/: B1_Download.ipynb  B2_Analyze.ipynb
examples/30_Archives/2_A2 Liquicomun/: B1_Download.ipynb  B2_Analyze.ipynb
examples/30_Indicators/0_Steps/: B1_Download.ipynb  B2_Analyze.ipynb
examples/30_Indicators/1_Markets/: B1_Download.ipynb  B2_Analyze.ipynb
examples/30_Indicators/2_Generation/: B1_Download.ipynb
examples/40_OfferIndicators/0_Steps/: B_Download.ipynb
examples/_specs/01_Quickstart/: 01_Setup and First Query.yaml
examples/_specs/02_Indicators/: 01_Search Indicators.yaml  02_Historical Data.yaml  03_Multi-Geography Indicators.yaml  04_Compare Indicators.yaml  05_Market Prices.yaml  06_Generation and Demand.yaml
examples/_specs/03_Archives/: 01_Download Archives.yaml  02_I90 Settlement Files.yaml
examples/_specs/04_Caching/: 01_Cache Management.yaml
examples/_specs/05_Advanced/: 01_Ad-hoc Pandas Expressions.yaml  02_Async Client.yaml
skills/esios/: SKILL.md
src/esios/: __init__.py  async_client.py  cache.py  catalog.py  client.py  constants.py  exceptions.py  mcp_server.py
src/esios/.agents/skills/esios/: SKILL.md
src/esios/cli/: __init__.py  app.py  archives.py  cache_cmd.py  catalog_cmd.py  config.py  config_cmd.py  exec_cmd.py  indicators.py
src/esios/data/: archives.yaml  geos.yaml  indicators.yaml  magnitudes.yaml  time_periods.yaml
src/esios/managers/: __init__.py  archives.py  base.py  indicators.py  offer_indicators.py
src/esios/models/: __init__.py  archive.py  indicator.py  offer_indicator.py
src/esios/processing/: __init__.py  dataframes.py  i90.py  zip.py
tests/: conftest.py  test_cache.py  test_client.py  test_dataframes.py  test_exceptions.py  test_i90.py  test_managers.py  test_models.py  test_zip.py
tests/archive/download_zip_file/: I90.ipynb  I90.librarycall.ipynb  coefk.library.call.ipynb  liquicomun.ipynb  liquicomun_library.call.ipynb  raw_call.ipynb  response.html  utils.py
tests/archive/hour_change/: script.ipynb
tests/archive/preprocessing_archives_i90/: B2_Analyze.ipynb  row_rows.ipynb
(+3 files in other folders)
