[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-esios"
version = "0.2.6"
description = "A Python wrapper for the ESIOS API"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
    {name = "Jesús López", email = "jesus.lopez@datons.ai"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests",
    "pandas",
    "openpyxl",
    "xlrd"
]

[project.urls]
homepage = "https://github.com/datons/python-esios"