[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-esios"
version = "2.0.2"
description = "A Python wrapper for the ESIOS API (Spanish electricity market)"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Jesús López", email = "jesus.lopez@datons.ai" },
]
keywords = ["esios", "ree", "energy", "electricity", "spain", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "pydantic>=2.0",
    "tenacity>=8.0",
    "python-calamine>=0.2",
    "beautifulsoup4>=4.12",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
esios = "esios.cli:app"

[project.urls]
Homepage = "https://github.com/datons/python-esios"
Repository = "https://github.com/datons/python-esios"
Issues = "https://github.com/datons/python-esios/issues"
Changelog = "https://github.com/datons/python-esios/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/esios"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
